# smart_gallery_guide

./: .dockerignore  .gitignore  README.md  alembic.ini  env.example  pyproject.toml
adapters/: __init__.py
adapters/telegram/: __init__.py  api_client.py  app.py  handlers.py  keyboards.py  settings.py  utils.py
agent/: agent.py
api/: __init__.py  deps.py  logging.py  main.py
api/routers/: __init__.py  asr.py  exhibits.py  faq.py  feedback.py  health.py  messages.py  qa.py  sessions.py  tasks.py
api/schemas/: __init__.py  asr.py  common.py  exhibits.py  faq.py  feedback.py  messages.py  qa.py  sessions.py  tasks.py
api/services/: __init__.py  asr_service.py  exhibit_service.py  faq_service.py  feedback_service.py  message_service.py  qa_service.py  session_service.py  task_service.py
bot/: bot.py  handlers.py  keyboards.py  utils.py
config/: config.py
core/: __init__.py  agent.py  device.py  schemas.py  settings.py  sync.py  vector_db.py
core/encoders/: __init__.py  asr.py  text.py  vision.py
core/search/: __init__.py  bm25.py  web.py
core/vlm/: __init__.py  client.py  context.py  prompts.py  response.py
data/benchmarks/: image_image_retrieval_benchmark.jsonl  image_text_retrieval_benchmark.jsonl  retrieval_benchmark.jsonl  vlm_benchmark.jsonl  vlm_image_benchmark.jsonl
data/benchmarks/results/text_encoder/image_text_retrieval/: Qwen__Qwen3-Embedding-0.6B.json  deepvk__USER-bge-m3.json  intfloat__multilingual-e5-large.json
data/benchmarks/results/text_encoder/retrieval/: Qwen__Qwen3-Embedding-0.6B.json  deepvk__USER-bge-m3.json  intfloat__multilingual-e5-large.json
data/benchmarks/results/vision_encoder/image_image_retrieval_benchmark/: Salesforce__blip-image-captioning-base.json  google__siglip-base-patch16-224.json  openai__clip-vit-base-patch32.json
data/benchmarks/results/vision_encoder/image_text_retrieval_benchmark/: Salesforce__blip-image-captioning-base.json  google__siglip-base-patch16-224.json  openai__clip-vit-base-patch32.json
data/benchmarks/results/vlm/vlm_imageqa/: OpenGVLab__InternVL3_5-8B.json  Qwen__Qwen3-VL-8B-Instruct.json  zai-org__GLM-4.1V-9B-Thinking.json
data/benchmarks/results/vlm/vlm_textqa/: OpenGVLab__InternVL3_5-8B.json  Qwen__Qwen3-VL-8B-Instruct.json  zai-org__GLM-4.1V-9B-Thinking.json
data/faq/: README.md
data/metadata/: 016e5d1e-cc4f-49da-9928-efe73a8b91f1.json  02d01626-87e1-49d4-967c-b41199d3ad9a.json  032b4c04-85f1-4c93-8389-8d771826271c.json  03466157-1f83-413e-acd1-a4c76a805470.json  0366f684-6272-4608-9a04-c9c74bd44520.json  03f28995-ff71-4cb1-892f-886dd7b4a4d3.json  03f3d531-740b-4e58-99ab-f7d298d8f404.json  042743aa-5515-43d4-acc3-090622031f3f.json  048eaf21-8a3c-4cd5-a13c-ca947438e934.json  0539ee6f-a969-4954-be6a-4d79f588ae70.json  05c3bd5d-3302-4ce0-a6c6-d4e64352b509.json  06477afb-7b84-4f96-ab46-28eba3c9ab32.json  069806fe-4b5b-447c-92ff-00b06f388b47.json  07896ec3-817a-493c-8e31-a5c14805eb1a.json  079220b3-d839-4efc-b34e-a2d9b0993e73.json  07eefe25-f453-4806-8985-2234c713ed16.json  080b8fa2-e1d1-4b88-bb56-81aafcfd6ec8.json  0824c8ef-6839-4065-8b21-e2b1cd971519.json  0850c2fe-a926-405b-a7a0-056379dcd5a8.json  09272ddf-3238-42e5-b4ea-9b9c5f085b1a.json  095b5f20-a2f4-4efa-a0ef-c7f53c33ec87.json  096cab8b-26fe-4c09-a8f3-1cb1a447921e.json  0a0ebff8-0e94-4f78-90c8-e47a86401164.json  0a319304-cf2e-4c46-b51e-8564d10c3998.json  0afa6f45-0378-4b18-83da-f3db584ffe18.json  0c213de0-0ba1-4d34-944c-039a5f276e39.json  0c9f1cca-c27b-4f83-b1f9-930a0c784298.json  0cd162d5-7733-49fe-a821-1aa54770ac54.json  0d2fe6c6-3ead-4544-9995-c77b9b4ae2ef.json  0d4865d1-7c3c-4e26-8fba-d2b49972014a.json  0d558fcd-2466-4a9b-8fca-1993a31c4557.json  0d5d3ef7-8894-42f2-9e30-f6bf975b2874.json  0d9c1202-21f3-46e7-9a28-25eefee3b646.json  0e08e30e-6281-4a6a-9c5c-1d5e57c02385.json  0e0b0233-53d0-46e7-b196-118a393d1ecb.json  0e799bff-9232-465a-ba61-0c9ecf056310.json  1052548331.json  10cd6fb1-c81a-4831-a084-4a5c00a244e6.json  12b4300d-000e-4952-a837-29972fe9ab3d.json  13ab2649-6adb-44d0-8e6a-3d6224b9ac05.json  (+420 more)
database/: schemas.py  vector_db.py
db/: __init__.py  base.py  session.py
db/migrations/: env.py
db/migrations/versions/: 20260501_2000_0001_initial_schema.py
db/models/: __init__.py  exhibit.py  faq_item.py  feedback.py  inference_task.py  message.py  session.py  user.py
db/repositories/: __init__.py  exhibit.py  faq_item.py  feedback.py  inference_task.py  message.py  session.py  user.py
deploy/: Dockerfile  docker-compose.yml
deploy/nginx/: nginx.conf
models/: asr.py  text_encoder.py  tts.py  vision_encoder.py  vlm.py
scripts/: example_vlm_usage.py  expand_metadata_perplexity.py  export_wikiart_exhibits.py  load_exhibits.py  load_faq.py  merge_metadata_expand.py  reindex_chroma.py  start_vllm_server.sh  test_api.sh  test_db.sh
services/: web_search.py
tests/: conftest.py  test_adapter_api_client.py  test_agent.py  test_api.py  test_asr_encoder.py  test_health_router.py  test_imports.py  test_migrations.py  test_schemas.py  test_telegram_utils.py  test_vision_encoder.py  test_vlm_response.py
workers/: vlm_worker.py
