[project]
name = "smart-gallery-guide-bot"
version = "0.1.0"
description = "Smart gallery guide bot in Telegram format"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ivan Sidorov"}
]
keywords = ["multimodal", "art", "vllm", "llm", "rag", "telegram", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot>=22.0",

    "chromadb>=1.0.0",

    "torch>=2.2.2",
    "transformers>=4.51.0",
    "sentence-transformers>=4.0.0",
    "sentencepiece>=0.2.0",
    "Pillow>=11.2.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    "openai>=1.70.0",

    "python-dotenv>=1.0.0",
    "numpy>=1.26,<3",
    "aiofiles>=23.2.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.0",
    "datasets>=2.20.0",
    "pyarrow>=15.0.0",

    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "ddgs>=9.0.0",

    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "asgi-lifespan>=2.1.0",
    "aiosqlite>=0.20.0",
    "jiwer>=3.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
smart-guide-bot = "adapters.telegram.app:main"
smart-guide-adapter = "adapters.telegram.app:main"
smart-guide-worker = "workers.vlm_worker:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "adapters*", "db*", "workers*"]
exclude = ["tests*", "scripts*", "data*", "chroma_store*", "docs*", "deploy*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "data",
    "chroma_store",
    # Одноразовые служебные утилиты (indexing, ingest, benchmarks) — не прикладной код.
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
